[Update -ssoPhase2] Ẩn text chạy thông báo liên kết sso, fix thời gian liên kết

--- a/src/app/main/dialog/account-link-dialog/account-link-dialog.component.html
+++ b/src/app/main/dialog/account-link-dialog/account-link-dialog.component.html
@@ -15,7 +15,7 @@
           Nhằm nâng cao chất lượng dịch vụ, MobiFone tiến hành nâng cấp hệ thống Quản lý tài khoản tập trung (SSO) cho các khách hàng sử dụng hệ sinh thái giải pháp số của MobiFone.
           <br>Sau khi hoàn thành liên kết, Quý khách có thể đăng nhập toàn bộ các hệ thống thuộc hệ sinh thái giải pháp của MobiFone bằng một tài khoản duy nhất.
         </div>
-        Thời gian liên kết từ ngày <span class="sso-warning-time">01/04/2024</span> đến ngày <span class="sso-warning-time">30/04/2024</span>
+        Thời gian liên kết từ ngày <span class="sso-warning-time">22/04/2024</span>.
       </div>
       <br>
       <div style="font-weight: bold;" class="link_sso__warning">Trân trọng cảm ơn Quý Khách hàng!</div>
