--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -9,14 +9,14 @@
       <div class="search-wrapper">
         <h3>{{title | translate}}</h3>
       </div>
-      <div class="warning-container">
+      <!-- <div class="warning-container">
         <div class="warning-scroll">
           <div class="RightToLeft">
             [THÔNG BÁO] Nhằm nâng cao chất lượng dịch vụ, MobiFone tiến hành nâng cấp hệ thống Quản lý tài khoản tập trung (SSO) cho các khách hàng sử dụng hệ sinh thái giải pháp số của MobiFone.
           Quý khách sẽ thực hiện liên kết tài khoản sử dụng với hệ thống Quản lý tài khoản tập trung SSO khi truy cập vào hệ thống trong khoảng thời gian từ ngày {{ssoExpireDate}}
           </div>
         </div>
-      </div>
+      </div> -->
       <div *ngIf="getShowHideSideBar()">
         <div *ngIf="!this.mobile" ngbDropdown class="d-inline-block">
           <div class="social-icons" ngbDropdownToggle (click)="loadDataNotification()">
