--- a/src/app/main/contract-signature/contract-signature.component.scss
+++ b/src/app/main/contract-signature/contract-signature.component.scss
@@ -33,7 +33,13 @@
 }
 
 .status_blue{
-  color: #027e21;
+  color: #2D6BE7;
+  background-color: #D8E6FA;
+  padding: 5px 16px 0px 16px;
+  width: 110px;
+  height: 35px;
+  display: inline-block;
+  border-radius: 4px;
 }
 
 .header {
@@ -47,8 +53,13 @@
 .list_header{
   color:#898989;
   text-align: center;
-  padding: 60px 12px 12px 0;
+  padding: 90px 12px 12px 0;
   font-weight: 500;
+  font-weight: 500;
+  background-color: #EBF2FB;
+  width: 100%;
+  margin-left: 0;
+  height: 44px;
 }
 
 .pagination {
@@ -120,11 +131,12 @@
 .btn_submit{
   width: 90px;
   font-size: inherit;
-  background: #106DB6;
-  color: white;
-  border: 1px solid #87CAFF;
+  background: #0041C4;
+  color: #FFFFFF;
+  border: 1px solid #0041C4;
   margin: 0 5px;
   padding: 2px;
+  border-radius: 4px;
 }
 .label_item{
   padding: 10px 0px 5px;
@@ -283,12 +295,49 @@
 
 .btn_submit{
   border: 0px;
-  border-radius: 5px;
+  border-radius: 4px;
   height: 33px;
   box-sizing: border-box;
-  color: white;
-  background-color: #106DB6;
+  background: #0041C4;
+  color: #FFFFFF;
+  border: 1px solid #0041C4;
   font-size: 13px;
   margin: 0 10px;
 }
 
+.btn_consider{
+  border: 1px solid #0041C4;
+  border-radius: 8px;
+  box-sizing: border-box;
+  color: #0041C4;
+  background-color: #FFFFFF;
+  font-size: 13px;
+  margin: 0 10px;
+  font-weight: 700;
+  height: 40px;
+}
+
+.btn_sign{
+  border: 0px;
+  border-radius: 8px;
+  box-sizing: border-box;
+  color: #FFFFFF;
+  background-color: #0041C4;
+  font-size: 13px;
+  margin: 0 10px;
+  font-weight: 700;
+  height: 40px;
+}
+
+.btn_advanced{
+  border: 0px;
+  border-radius: 8px;
+  box-sizing: border-box;
+  color: #001A4D;
+  background-color: #FFFFFF;
+  font-size: 13px;
+  margin: 0 10px;
+  font-weight: 700;
+  box-shadow: 0px 3px 12px 0px #1055E11A;
+  border: 1px solid #001A4D1A
+}
