--- a/src/app/main/contract/contract.component.scss
+++ b/src/app/main/contract/contract.component.scss
@@ -1,6 +1,6 @@
 .item_contract {
-  border: 1px solid #106DB6;
-  border-radius: 10px;
+  // border: 1px solid #106DB6;
+  // border-radius: 10px;
   padding: 8px;
   margin-top: 5px;
   line-height: 24px;
@@ -14,7 +14,7 @@
 .item_contract_name {
   font-weight: 500;
   font-size: 16px;
-  color: #106DB6;
+  color: #001A4D;
   cursor: pointer;
   white-space: pre-wrap;
 }
@@ -33,7 +33,13 @@
 }
 
 .status_blue{
-  color: #027e21;
+  color: #2D6BE7;
+  background-color: #D8E6FA;
+  padding: 5px 16px 0px 16px;
+  width: 110px;
+  height: 35px;
+  display: inline-block;
+  border-radius: 4px;
 }
 
 .list_header{
@@ -41,6 +47,11 @@
   text-align: center;
   padding: 12px 12px 0;
   font-weight: 500;
+  // padding-top: 20px;
+  background-color: #EBF2FB;
+  width: 100%;
+  margin-left: 0;
+  height: 44px;
 }
 
 .pagination {
@@ -65,6 +76,12 @@
 
 .pagination a:hover:not(.active) {background-color: #ddd;}
 
+.input-checkbox{
+  text-align: left;
+  width: 20px;
+  height: 20px;
+  margin: 15px;
+}
 
 .input-group-text{
   padding: 8.5px;
@@ -116,8 +133,9 @@
 }
 .search{
   border: 1px solid #106DB6;
-  border-radius: 15px;
+  border-radius: 8px;
   height: 38px;
+  
 }
 .input-line {
   display: flex;
@@ -138,6 +156,10 @@
   padding: 10px;
   width: 100%;
   outline:0px;
+  background-color: #F1F5FE;
+  padding: 10px 16px 10px 16px;
+  opacity: 0px;
+
 }
 
 :host ::ng-deep {
@@ -183,18 +205,37 @@
     box-shadow: none !important;
     height: 33px;
     width: 50%;
+    font-weight: 500;
   }
 
   .p-selectbutton .p-button.p-highlight {
-    background: #c5ebff;
-    border-color: #c5ebff;
-    color: #106DB6;
+    background: #F6F6F6;
+    border-color: #F6F6F6;
+    color: #001A4D;
+    font-weight: 600;
   }
+}
+
+// .long-text-ellipsis {
+//   overflow: hidden;
+//   white-space: nowrap;
+//   // width: inherit;
+//   text-overflow: ellipsis;
+//   // max-width: 113px;
+// }
+
+.three_dot{
+  cursor: pointer;
+}
+
+.three_dot_text{
+  margin: 10px;
 }
 
 .fa_icon{
   font-size: 17px;
   cursor: pointer;
+  color: #8E9AB0;
 }
 .contract_footer{
   padding-top: 10px;
@@ -205,9 +246,9 @@
   position:absolute;
   display: flex;
   flex-wrap: nowrap;
-  color: #0160AE;
+  color: #A5AAB6;
   select{
-    border: 1px solid #0160AE;
+    border: 1px solid #A5AAB6;
     border-radius: 5px;
   }
 }
@@ -219,7 +260,7 @@
   text-align: center;
 }
 .footer_page_number{
-  color: #0160AE
+  color: #A5AAB6
 }
 .col-md-100-1{
   width: 100%;
@@ -296,6 +337,30 @@
   background-color: #106DB6;
   font-size: 13px;
   margin: 0 10px;
+}
+
+.btn_advanced{
+  border: 0px;
+  border-radius: 8px;
+  box-sizing: border-box;
+  color: #001A4D;
+  background-color: #FFFFFF;
+  font-size: 13px;
+  margin: 0 10px;
+  font-weight: 700;
+  box-shadow: 0px 3px 12px 0px #1055E11A;
+  border: 1px solid #001A4D1A
+}
+
+.btn_cancel{
+  border: 0px;
+  border-radius: 8px;
+  box-sizing: border-box;
+  color: #FFFFFF;
+  background-color: #0041C4;
+  font-size: 13px;
+  margin: 0 10px;
+  font-weight: 700;
 }
 
 #table td {
