[Update - ResetPassword] Thêm điều kiện check user đã liên kết sso hay chưa

--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -126,8 +126,8 @@
                   <div class="db_password"></div>
                 </div>
                 <div>{{'login.reset_password_new' | translate }}
-                  <a href="https://auth-sso.mobifone.vn/vn/profile-information" ></a
-                >
+                  <!-- <a href="https://auth-sso.mobifone.vn/vn/profile-information" ></a -->
+                <!-- > -->
                 </div>
               </div>
             </button>
