--- a/src/app/main/contract-folder/add-folder/add-folder.component.html
+++ b/src/app/main/contract-folder/add-folder/add-folder.component.html
@@ -5,10 +5,10 @@
   <div class="folder-name">
     <div class="label-input">{{'folder.name' | translate}}&nbsp;<span style="color: red; padding: 0">*</span></div>
     <div class="input-data-name" [ngStyle]="getStyleDetail()"><input type="text border" [readonly]="this.action == 'openDetail'" [ngStyle]="getStyleDetail()" [(ngModel)]="this.name" maxlength="255"></div>
-    <div style="color: red" *ngIf="!this.name.trim() && this.isSubmit">
+    <div style="color: red" *ngIf="!this.name?.trim() && this.isSubmit">
         {{'name.folder.invalid' | translate}}
     </div>
-    <div style="color: red" *ngIf="this.name.trim() && !parttern_input.new_input_form.test(this.name) && this.isSubmit">
+    <div style="color: red" *ngIf="this.name?.trim() && !parttern_input.new_input_form.test(this.name) && this.isSubmit">
       {{'name.folder.not.special.char' | translate}}
     </div>
   </div>
