chinh sua bo cuc giao dien dashboard & login

--- a/src/app/main/customer/customer.component.scss
+++ b/src/app/main/customer/customer.component.scss
@@ -184,7 +184,7 @@
   
     .p-datatable-table, .ng-star-inserted{
       font-size: 13px;
-      font-family: font_lexend_deca;
+      font-family: 'Roboto';
     }
     .p-datatable .p-paginator-bottom {
       border-width: 0;
