--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -17,8 +17,8 @@
               <div class="label">Ông/ Bà {{nameCurrentUser}}</div>
               <div class="label">{{phoneCurrentUser}}</div>
             </div>
-            <div>
-              <img style="width: 25px; height: 25px;" src="../../assets/img/arrow-down.svg"/>
+            <div style="margin-left: 16px;">
+              <img style="width: 24px; height: 24px;" src="../../assets/img/arrow-down.svg"/>
             </div>
           </div>
 
