--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -78,11 +78,11 @@ header {
   display: flex;
   align-items: center;
   cursor: pointer;
-  padding: 12px;
+  padding: 16px;
 
 }
 .social-icons:hover {
-  background: #c5ebff;
+  // background: #c5ebff;
 }
 
 
