--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -61,7 +61,8 @@
 .copyright{
   font-size: 14px;
   color: #001A4DDB;
-
+  font-weight: 400;
+  // font-family: Roboto;
 }
 
 .btn-block {
@@ -193,14 +194,14 @@ img {
   // background: #fff;
   // max-width: 1280px;
   position: relative;
-  background: url("../../assets/img/BGeContract.png") center center;
+  background: url("../../assets/img/BG.svg") center center;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
-  background-size: cover;
+  // background-size: cover;
   width: 100%;
   height: 100%;
-  background-size: contain;
+  // background-size: contain;
   margin: auto;
 }
 .full-height {
