--- a/src/app/main/contract/contract.component.scss
+++ b/src/app/main/contract/contract.component.scss
@@ -346,7 +346,7 @@
   color: #001A4D;
   background-color: #FFFFFF;
   font-size: 13px;
-  margin: 0 10px;
+  // margin: 0 10px;
   font-weight: 700;
   box-shadow: 0px 3px 12px 0px #1055E11A;
   border: 1px solid #001A4D1A
