--- a/src/app/main/dashboard/dashboard.component.scss
+++ b/src/app/main/dashboard/dashboard.component.scss
@@ -35,7 +35,7 @@
 }
 
 .container-fluid{
-  background-color: #F5F5F5;
+  // background-color: #F5F5F5;
 }
 .item_contract_name1 {
   font-weight: 700;
@@ -64,24 +64,24 @@
   border: 0.5px solid #1487E14D
 }
 .header_card:hover{
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  box-shadow: 0px 3px 12px 0px rgba(16, 85, 225, 0.10);
   cursor: pointer;
 }
 .header_card_1{
   background-color: #FFFFFF;
-  width: 45%;
+  // width: 48%;
 }
 .header_card_2{
   background-color: #FFFFFF;
-  width: 45%;
+  // width: 48%;
 }
 .header_card_3{
   background-color: #FFFFFF;
-  width: 45%;
+  // width: 45%;
 }
 .header_card_4{
   background-color: #FFFFFF;
-  width: 45%;
+  // width: 45%;
 }
 .text_header_card{
   padding: 27px;
@@ -148,25 +148,25 @@ h3{
 }
 
 .add-contract-theme{
-  background: url("../../../assets/img/frame_db.svg");
+  background: url("../../../assets/img/frame_db1.svg");
   background-size: cover;
   width: 100%;
-  height: 160px;
+  height: 178px;
   color: #FFFFFF;
-  border-radius: 18px;
-  padding: 20px;
+  border-radius: 12px;
+  padding: 24px;
   // display: flex;
 }
 
 .contract-processing{
   background-color: #FFFFFF;
-  border-radius: 18px;
-  padding: 15px;
+  border-radius: 12px;
+  padding: 24px;
 }
 
 .contract-request{
   background-color: #FFFFFF;
-  border-radius: 18px;
+  border-radius: 12px;
   padding: 15px;
   height: 100%;
 }
