--- a/src/app/main/sidebar/sidebar.component.scss
+++ b/src/app/main/sidebar/sidebar.component.scss
@@ -151,7 +151,7 @@
       //styleName: Content/12 Medium;
       font-family: "Roboto";
       font-size: 14px;
-      font-weight: 900;
+      font-weight: 400;
       line-height: 18px;
       text-align: left;
 
@@ -178,7 +178,7 @@
           cursor: pointer;
 
           img {
-            margin-right: 10px;
+            // margin-right: 10px;
             font-size: 12px;
             width: 20px;
             height: 30px;
@@ -427,7 +427,7 @@
 
 
 /*------------------------------default theme---------------------------------*/
-$bg-sidebar-wrapper : #F9FDFF;
+// $bg-sidebar-wrapper : (--BG, #F3F6FA);
 $border-color : #2b2b2b;
 $footer-top-border-color :#3a3a3a;
 $color:#001A4D;
@@ -437,8 +437,8 @@ $shadow-color:#131212;
 $bg-scrollbar :#636363;
 
 // colors with backgound image
-$img-bg-sidebar-wrapper : rgba(183, 206, 250, 0.1);
-$img-border-color : #b4b2b226;
+// $img-bg-sidebar-wrapper : rgba(183, 206, 250, 0.1);
+$img-border-color : #F3F6FA;
 $img-bg-footer :rgba(43, 43, 43, 0.5);
 $img-shadow-color:rgba(0, 0, 0, 0.5);
 
@@ -446,7 +446,7 @@ $img-shadow-color:rgba(0, 0, 0, 0.5);
 
 .sidebar {
 
-  background-color: $bg-sidebar-wrapper;
+  
 
   .sidebar-profile,
   .sidebar-search,
@@ -470,6 +470,7 @@ $img-shadow-color:rgba(0, 0, 0, 0.5);
   #close-sidebar {
     color: $color;
   }
+  
 
   .sidebar-menu ul li:hover>a,
   .sidebar-menu .active>a,
@@ -480,7 +481,9 @@ $img-shadow-color:rgba(0, 0, 0, 0.5);
   #close-sidebar:hover {
     //color: $hover-color !important;
     background-color: #FFFFFF;
-    font-weight: 800;
+    font-weight: 700;
+    color: var(--Primary, #0041C4);
+    border-radius: 8px;
   }
 
   // ul li:hover a i,
@@ -493,10 +496,11 @@ $img-shadow-color:rgba(0, 0, 0, 0.5);
   .sidebar-menu ul li a i,
   .sidebar-menu .sidebar-dropdown div,
   .sidebar-search input.search-menu,
-  .sidebar-search .input-group-text {
-    background-color: $border-color;
+  .sidebar-search .input-group-text{
+    // background-color: $border-color;
     border: none;
     margin-left: 1px;
+    color: #286CF5;
   }
 
   .sidebar-menu .header-menu span {
@@ -519,7 +523,7 @@ $img-shadow-color:rgba(0, 0, 0, 0.5);
 
   // styles with background image
   &.sidebar-bg {
-
+    // background-color: var(--BG, #F3F6FA);
     //background-image: url(/assets/img/bg1.jpg);
     background-size: cover;
     background-position: center;
@@ -532,7 +536,7 @@ $img-shadow-color:rgba(0, 0, 0, 0.5);
       right: 0;
       bottom: 0;
       left: 0;
-      background-color: $img-bg-sidebar-wrapper;
+      // background-color: $img-bg-sidebar-wrapper;
     }
 
     .sidebar-profile,
