--- a/src/app/main/contract-folder/contract-folder.component.html
+++ b/src/app/main/contract-folder/contract-folder.component.html
@@ -62,7 +62,7 @@
       </div>
 
       <div class="col-md-1 item_icon">
-        <div style="display: flex; justify-content: center;">
+        <div class="actions-field-items">
           <div class="div_icon">
             <img src="../../assets/img/icon_edit.svg" class="img_icon" ngbTooltip="{{'role.contract-folder.edit' | translate}}" (click)="editFolder(item)" />
           </div>
@@ -100,17 +100,12 @@
 
 <!-- Children -->
 <ng-template #isViewChildFolder>
-  <!-- <app-current-folder [foldersData]="foldersData">
-    <div>
-      hello
-    </div>
-  </app-current-folder> -->
   <div class="col-md-4" class="container-fluid">
     <ng-template [ngIf]="isOrg">
         <div class="col-md-12" style="padding-top: 20px;">
             <div class="input-line search">
                 <img src="../../assets/img/icon_search.svg" class="input-img" />
-                <input [(ngModel)]="searchName" (keyup)="autoSearch($event)" type="text" id="filter_name" class="input-text" placeholder="{{'contract.search.name.placeholder' | translate}}" />
+                <input [(ngModel)]="searchName" (keyup)="autoSearch($event)" type="text" id="filter_name" class="input-text" placeholder="{{'folder.search.placeholder' | translate}}" />
             </div>
         </div>
 
@@ -170,7 +165,7 @@
             </div>
       
             <div class="col-md-1 item_icon">
-              <div style="display: flex; justify-content: center;">
+              <div class="actions-field-items">
                 <div class="div_icon">
                   <img src="../../assets/img/icon_edit.svg" class="img_icon" ngbTooltip="{{'role.contract-folder.edit' | translate}}" (click)="editFolder(item)" />
                 </div>
@@ -196,7 +191,7 @@
                 <div class="row">
                     <div class="col-md-11">
                         <div class="item_folder_name">
-                            <a class="item_folder_name" style="text-decoration: none;" (click)="openDetail(item)">
+                            <a class="item_folder_name" style="text-decoration: none;" (click)="openFolder(item)">
                                 {{item.name}}
                             </a>
                         </div>
@@ -209,8 +204,8 @@
                         <div class="row">
                             <div class="item_contract_infor">{{'contract.status' | translate}}:
                                 <span
-                                    [style.color]="item.status == 35 ? 'red' : '#027E21'"
-                                    class="status_blue">{{item.status | pipe | translate}}
+                                    [style.color]="item.contract.status == 35 ? 'red' : '#027E21'"
+                                    class="status_blue">{{item.contract.status | pipe | translate}}
                                 </span>
                             </div>
                         </div>
@@ -227,17 +222,17 @@
 
             <!--Cột 3: Ngày hết hạn ký-->
             <div class="col-md-3 calendar_last_updated">
-                <div *ngIf="item.status !== 35"><i class="fa fa-calendar fa_icon"></i><span class="item_date">{{item.updatedAt | date:
+                <div *ngIf="item?.contract?.status !== 35"><i class="fa fa-calendar fa_icon"></i><span class="item_date">{{item.updatedAt | date:
                         'dd/MM/yyyy'}}</span></div>
             </div>
 
             <!--Cột 4: Thao tác-->
             <div class="col-md-1 item_icon">
-                <div class="icon">
+                <div class="icon actions-field-items">
                     <div class="div_icon">
                         <img src="../../assets/img/icon_delete.svg" class="img_icon" (click)="deleteFolder([item])" ngbTooltip="{{'contract.delete' | translate}}"/>
                     </div>
-                    <div class="div_icon" *ngIf="item.status == 35">
+                    <div class="div_icon" *ngIf="item?.contract?.status == 35">
                         <img src="../../assets/img/icon_edit.svg" class="img_icon" ngbTooltip="{{'contract.edit' | translate}}" (click)="editContractData(item)"/>
                     </div>
                 </div>
